[gd_scene load_steps=3 format=3 uid="uid://dpesa1n6twi7s"]

[ext_resource type="Script" path="res://Scenes/BattleAreaTriggers/fight_area.gd" id="1_uyisy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x18xw"]
size = Vector2(16, 226)

[node name="Area1" type="Node2D" groups=["battle_trigger_group"]]
script = ExtResource("1_uyisy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_x18xw")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="Calculate" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Calculate" to="." method="_on_calculate_timeout"]
